--- a/it-inventory-hub/package.json
+++ b/it-inventory-hub/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^4.6.2",
+    "bootstrap-icons": "^1.11.1",
     "install": "^0.13.0",
     "npm": "^10.2.1",
     "rxjs": "~7.8.0",
