--- a/it-inventory-hub/package.json
+++ b/it-inventory-hub/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngx-translate/core": "^15.0.0",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.11.1",
     "install": "^0.13.0",
